# kivi-sakset-paperi-tekoaly

./: .gitignore  .pylintrc  README.md  ksp_peli.spec  pyproject.toml  tasks.py
.github/workflows/: blank.yml
dokumentaatio/: kayttoohje.md  testausdokumentti.md  toteutusdokumentti.md  vaatimusmaarittely.md
dokumentaatio/data/: tiralabra-2023-04-23-empiirinen-koe.ods
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: index.py
src/entities/: markov_ketju.py  markovin_ketju.py  peli.py
src/entities/tekoalyt/: markov_tekoaly.py  tekoaly.py  yhdistelma_tekoaly.py
src/services/: __init__.py  peli_logiikka.py
src/tests/entities/: test_markov_ketju.py  test_markovin_ketju.py  test_peli.py
src/tests/entities/tekoalyt/: test_markov_tekoaly.py  test_yhdistelma_tekoaly.py
src/tests/services/: test_peli_logiikka.py
src/ui/: alusta_peli_nakyma.py  nakyma.py  peli_nakyma.py  tilasto_nakyma.py  ui.py
