[tool.poetry]
name = "ksp-tekoaly"
version = "0.1.0"
description = ""
authors = ["Jiahao Li <42709836+TheJiahao@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ksp_tekoaly"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
