[tool.poetry]
name = "ksp-tekoaly"
version = "0.1.0"
description = ""
authors = ["Jiahao Li <42709836+TheJiahao@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "ksp_tekoaly" }]

[tool.poetry.dependencies]
python = "^3.11, <3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.0"
invoke = "^2.0.0"
pytest-cov = "^4.0.0"
pyinstaller = "^5.10.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
